--- a/eureka-dev.yml
+++ b/eureka-dev.yml
@@ -1,10 +1,6 @@
 eureka:
   instance:
-    hostname: localhost
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8901/eureka/,http://localhost:8902/eureka/
+    hostname: eureka
 info:
   appName: mySpringCloud
   author: zxa
