--- a/eureka-dev.yml
+++ b/eureka-dev.yml
@@ -1,7 +1,7 @@
 eureka:
   instance:
     hostname: eureka
-	instanceId: eureka
+	instance_id: eureka
 info:
   appName: mySpringCloud
   author: zxa
