添加邮箱服务配置文件

--- a/email-server-dev.yml
+++ b/email-server-dev.yml
@@ -35,10 +35,9 @@ mail:
   binding:
     time: 10
 
-
-
-
 info:
+  build.artifactId: $project.artifactId$
+  build.version: $project.version$
   appName: mySpringCloud
   author: zxa
 
