添加用户服务配置文件

--- a/email-server-dev.yml
+++ b/email-server-dev.yml
@@ -36,8 +36,8 @@ mail:
     time: 10
 
 info:
-  build.artifactId: $project.artifactId$
-  build.version: $project.version$
+  build.artifactId: @project.artifactId@
+  build.version: @project.version@
   appName: mySpringCloud
   author: zxa
 
